--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -52,6 +52,10 @@
       <Name>blqw.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="json1.txt" />
+    <Content Include="json2.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>taskkill /f /fi "pid gt 0" /fi "status eq running" /im "$(TargetFileName)" /t</PreBuildEvent>
