--- a/blqw.Core/blqw.Core.csproj
+++ b/blqw.Core/blqw.Core.csproj
@@ -48,14 +48,23 @@
     <Compile Include="DictionaryEx.cs" />
     <Compile Include="Disposable.cs" />
     <Compile Include="ExtendMethods\Type.cs" />
+    <Compile Include="Literacy\AttributeCollection.cs" />
+    <Compile Include="Literacy\Delegate.cs" />
+    <Compile Include="Literacy\ILoadMember.cs" />
+    <Compile Include="Literacy\Literacy.cs" />
+    <Compile Include="Literacy\ObjectProperty.cs" />
+    <Compile Include="Literacy\ObjectPropertyCollection.cs" />
     <Compile Include="LoadResourceDll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EasyStringReader.cs" />
     <Compile Include="QuickStringWriter.cs" />
-    <Compile Include="Types.cs" />
     <Compile Include="UsingLock.cs" />
     <Compile Include="WinApi.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="mklink.bat" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
