--- a/blqw.Core/blqw.Core.csproj
+++ b/blqw.Core/blqw.Core.csproj
@@ -62,7 +62,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EasyStringReader.cs" />
     <Compile Include="QuickStringWriter.cs" />
+    <Compile Include="StringConverter.cs" />
     <Compile Include="UsingLock.cs" />
+    <Compile Include="UsingLock2.cs" />
     <Compile Include="WinApi.cs" />
   </ItemGroup>
   <ItemGroup>
