--- a/blqw.Core/blqw.Core.csproj
+++ b/blqw.Core/blqw.Core.csproj
@@ -71,9 +71,7 @@
   <ItemGroup>
     <None Include="mklink.bat" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ExtendMethods\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
