--- a/blqw.Core/blqw.Core.csproj
+++ b/blqw.Core/blqw.Core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EasyStringReader.cs" />
     <Compile Include="QuickStringWriter.cs" />
+    <Compile Include="Security.cs" />
     <Compile Include="UsingLock.cs" />
     <Compile Include="UsingLock2.cs" />
     <Compile Include="WinApi.cs" />
