--- a/blqw.Core/blqw.Core.csproj
+++ b/blqw.Core/blqw.Core.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>blqw</RootNamespace>
-    <AssemblyName>blqw</AssemblyName>
+    <AssemblyName>blqw.Core</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -47,16 +47,6 @@
     <Compile Include="DynamicCompile.cs" />
     <Compile Include="DictionaryEx.cs" />
     <Compile Include="Disposable.cs" />
-    <Compile Include="Literacy\AttributeCollection.cs" />
-    <Compile Include="Literacy\Convert2.cs" />
-    <Compile Include="Literacy\Delegate.cs" />
-    <Compile Include="Literacy\ILoadMember.cs" />
-    <Compile Include="Literacy\Literacy.cs" />
-    <Compile Include="Literacy\ObjectProperty.cs" />
-    <Compile Include="Literacy\ObjectPropertyCollection.cs" />
-    <Compile Include="Literacy\TypeCodes.cs" />
-    <Compile Include="Literacy\TypeInfo.cs" />
-    <Compile Include="Literacy\TypesHelper.cs" />
     <Compile Include="LoadResourceDll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EasyStringReader.cs" />
@@ -68,6 +58,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="mklink.bat" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\blqw.Literacy\Literacy\Literacy\Literacy.csproj">
+      <Project>{d0c3b619-180a-407b-be4a-9c1864b2a06d}</Project>
+      <Name>Literacy</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
